--- a/Guess Number Game - 2/styles.css
+++ b/Guess Number Game - 2/styles.css
@@ -31,13 +31,17 @@ main {
   padding: 7px;
   color: whitesmoke;
   font-weight: 700;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(5px);
   border-radius: 20px;
 
 }
 
 .intro p{
   font-size: 1rem;
+}
+
+.intro:hover{
+  color: rgb(248, 245, 51);
 }
 
 h1 {
@@ -49,7 +53,7 @@ h1 {
   height: 350px;
   font-weight: 500;
   border-radius: 20px;
-  color: rgb(211, 208, 46);
+  color: hsl(178, 100%, 50%);
   background: rgba(27, 79, 138, 0.3);
   backdrop-filter: blur(15px);
   /* overflow: hidden; */
